projects links added in index.html

--- a/index.html
+++ b/index.html
@@ -169,10 +169,12 @@
                   </p>
                   <ul class="project-links-3">
                     <li>
-                      <a href="#"><i class="fa-solid fa-code"></i> Code</a>
+                      <a href="https://github.com/sanskar001/precook-recipe-app"
+                        ><i class="fa-solid fa-code"></i> Code</a
+                      >
                     </li>
                     <li>
-                      <a href="#"
+                      <a href="https://precook-recipe-app-project.web.app/"
                         ><i class="fa-solid fa-arrow-up-right-from-square"></i>
                         Website</a
                       >
@@ -196,10 +198,13 @@
                   </p>
                   <ul class="project-links-4">
                     <li>
-                      <a href="#"><i class="fa-solid fa-code"></i> Code</a>
+                      <a
+                        href="https://github.com/sanskar001/expense-tracker-app"
+                        ><i class="fa-solid fa-code"></i> Code</a
+                      >
                     </li>
                     <li>
-                      <a href="#"
+                      <a href="https://expense-tracker-sanskar.netlify.app/"
                         ><i class="fa-solid fa-arrow-up-right-from-square"></i>
                         Website</a
                       >
@@ -223,10 +228,13 @@
                   </p>
                   <ul class="project-links-5">
                     <li>
-                      <a href="#"><i class="fa-solid fa-code"></i> Code</a>
+                      <a
+                        href="https://github.com/sanskar001/curious-portfolio-website"
+                        ><i class="fa-solid fa-code"></i> Code</a
+                      >
                     </li>
                     <li>
-                      <a href="#"
+                      <a href="https://curious-sanskar-maheshwari.netlify.app/"
                         ><i class="fa-solid fa-arrow-up-right-from-square"></i>
                         Website</a
                       >
@@ -250,10 +258,12 @@
                   </p>
                   <ul class="project-links-1">
                     <li>
-                      <a href="#"><i class="fa-solid fa-code"></i> Code</a>
+                      <a href="https://github.com/sanskar001/tic-tac-toe"
+                        ><i class="fa-solid fa-code"></i> Code</a
+                      >
                     </li>
                     <li>
-                      <a href="#"
+                      <a href="https://sanskar001.github.io/tic-tac-toe/"
                         ><i class="fa-solid fa-arrow-up-right-from-square"></i>
                         Website</a
                       >
@@ -274,10 +284,12 @@
                   </p>
                   <ul class="project-links-2">
                     <li>
-                      <a href="#"><i class="fa-solid fa-code"></i> Code</a>
+                      <a href="https://github.com/sanskar001/w3schools-clone"
+                        ><i class="fa-solid fa-code"></i> Code</a
+                      >
                     </li>
                     <li>
-                      <a href="#"
+                      <a href="https://sanskar001.github.io/w3schools-clone/"
                         ><i class="fa-solid fa-arrow-up-right-from-square"></i>
                         Website</a
                       >
@@ -355,9 +367,7 @@
                 I am interested in working with you. If you have any job
                 opportunity, please consider me!
               </p>
-              <p class="text">
-                If you have any question, feel free to ask 🐱‍🏍.
-              </p>
+              <p class="text">If you have any question, feel free to ask 😊.</p>
             </div>
             <form class="contact-form">
               <div class="sender-name form-item">
