projects links updated in index.html

--- a/index.html
+++ b/index.html
@@ -169,12 +169,16 @@
                   </p>
                   <ul class="project-links-3">
                     <li>
-                      <a href="https://github.com/sanskar001/precook-recipe-app"
+                      <a
+                        href="https://github.com/sanskar001/precook-recipe-app"
+                        target="_blank"
                         ><i class="fa-solid fa-code"></i> Code</a
                       >
                     </li>
                     <li>
-                      <a href="https://precook-recipe-app-project.web.app/"
+                      <a
+                        href="https://precook-recipe-app-project.web.app/"
+                        target="_blank"
                         ><i class="fa-solid fa-arrow-up-right-from-square"></i>
                         Website</a
                       >
@@ -200,11 +204,14 @@
                     <li>
                       <a
                         href="https://github.com/sanskar001/expense-tracker-app"
+                        target="_blank"
                         ><i class="fa-solid fa-code"></i> Code</a
                       >
                     </li>
                     <li>
-                      <a href="https://expense-tracker-sanskar.netlify.app/"
+                      <a
+                        href="https://expense-tracker-sanskar.netlify.app/"
+                        target="_blank"
                         ><i class="fa-solid fa-arrow-up-right-from-square"></i>
                         Website</a
                       >
@@ -230,11 +237,14 @@
                     <li>
                       <a
                         href="https://github.com/sanskar001/curious-portfolio-website"
+                        target="_blank"
                         ><i class="fa-solid fa-code"></i> Code</a
                       >
                     </li>
                     <li>
-                      <a href="https://curious-sanskar-maheshwari.netlify.app/"
+                      <a
+                        href="https://curious-sanskar-maheshwari.netlify.app/"
+                        target="_blank"
                         ><i class="fa-solid fa-arrow-up-right-from-square"></i>
                         Website</a
                       >
@@ -258,12 +268,16 @@
                   </p>
                   <ul class="project-links-1">
                     <li>
-                      <a href="https://github.com/sanskar001/tic-tac-toe"
+                      <a
+                        href="https://github.com/sanskar001/tic-tac-toe"
+                        target="_blank"
                         ><i class="fa-solid fa-code"></i> Code</a
                       >
                     </li>
                     <li>
-                      <a href="https://sanskar001.github.io/tic-tac-toe/"
+                      <a
+                        href="https://sanskar001.github.io/tic-tac-toe/"
+                        target="_blank"
                         ><i class="fa-solid fa-arrow-up-right-from-square"></i>
                         Website</a
                       >
@@ -284,12 +298,16 @@
                   </p>
                   <ul class="project-links-2">
                     <li>
-                      <a href="https://github.com/sanskar001/w3schools-clone"
+                      <a
+                        href="https://github.com/sanskar001/w3schools-clone"
+                        target="_blank"
                         ><i class="fa-solid fa-code"></i> Code</a
                       >
                     </li>
                     <li>
-                      <a href="https://sanskar001.github.io/w3schools-clone/"
+                      <a
+                        href="https://sanskar001.github.io/w3schools-clone/"
+                        target="_blank"
                         ><i class="fa-solid fa-arrow-up-right-from-square"></i>
                         Website</a
                       >
