Text content changed in experience section

--- a/index.html
+++ b/index.html
@@ -91,13 +91,12 @@
           <div class="left">
             <div class="description">
               <p class="text">
-                I create a successfull responsive website that are fast, easy to
-                use using modern web technologies like HTML5, CSS3, Sass, JS and
-                React.
+                I work with modern web technologies like HTML5, CSS3, Sass, JS
+                and React to create successfull responsive websites that are
+                fast, easy to use.
               </p>
               <p class="text">
-                I also create beautiful UI with greater UX with Figma design
-                tool.
+                I create beautiful UI with greater UX with Figma design tool.
               </p>
               <p class="text">
                 And also work on some neccessay tools like Git, Parcel, Firebase
@@ -329,15 +328,18 @@
             <p class="experience-period">11 months</p>
             <div class="experience-detail">
               <p>
-                As a Production engineer, I worked alongside the R&D team and
-                sales and marketing team for reaching good quality products
-                which satisfy customer needs. and goals.
+                Improved component traceability process with the help of
+                software and redesigned a production line to prevent production
+                loss.
               </p>
               <p>
-                Also worked on Shainin technique for finding defects in the
-                product as well as in process.
+                Also worked collaboratively with Secure meters UK on meter
+                defect analysis.
               </p>
-              <p>Collaborative worked with Secure UK team.</p>
+              <p>
+                Effectively managed seven production lines and optimized them
+                using Shainin Technique.
+              </p>
             </div>
           </div>
           <div class="experience-card experience-card-2">
@@ -347,14 +349,11 @@
             <p class="experience-period">6 months</p>
             <div class="experience-detail">
               <p>
-                During my internship, I worked on some product quality projects
-                with hardware, and software teams.
-              </p>
-              <p>
-                Worked on customer returned product failure analysis. Also
+                I worked on customer returned product failure analysis. Also
                 contributed to improving production line process.
               </p>
-              <p>Also, work on some of the meter testing machines.</p>
+              <p>Contributed in improving line productivity by 60%.</p>
+              <p>Also, worked with meter testing softwares and machines.</p>
             </div>
           </div>
           <div class="experience-card experience-card-3">
@@ -364,8 +363,8 @@
             <p class="experience-period">2 months</p>
             <div class="experience-detail">
               <p>
-                In this training program, I have learned about Smart Electronic
-                System Design by working on the below topics.
+                In this training program, I learnt about Smart Electronic System
+                Design in context of the below topics.
               </p>
               <p>
                 Pattern Recognition, designing and development of semiconductor
