Content change in project card

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                   <h3>Tic Tac Toe</h3>
                   <p>
                     Play the classic interactive Tic-Tac-Toe game for free
-                    online with one or two players.
+                    online with two players.
                   </p>
                   <ul class="project-links-1">
                     <li>
