REFACTOR: update skills text and skills icon on right

--- a/index.html
+++ b/index.html
@@ -91,35 +91,41 @@
           <div class="left">
             <div class="description">
               <p class="text">
-                I work with modern web technologies like HTML5, CSS3, Sass, JS
-                and React to create successfull responsive websites that are
-                fast, easy to use.
+                I work with modern web technologies like Nextjs, React,
+                Typescript, Tailwind CSS and Redux to create successfull
+                responsive + interactive web app that are fast, easy to use.
               </p>
               <p class="text">
                 I create beautiful UI with greater UX with Figma design tool.
               </p>
               <p class="text">
-                And also work on some neccessay tools like Git, Parcel, Firebase
-                etc.
+                And also work on some neccessay tools like Git, Docker,
+                Grafana-Faro etc.
               </p>
             </div>
           </div>
           <div class="right">
             <div class="grid-icon-container">
-              <span class="firebase-icon icon small">
-                <img src="src/img/skills/firebase-icon.svg" alt="firebase" />
+              <span class="docker-icon icon extra-small">
+                <img src="src/img/skills/docker-icon.svg" alt="docker" />
               </span>
-              <span class="typescript-icon icon small">
+              <span class="nodejs-icon icon small">
+                <img src="src/img/skills/nodejs-icon.svg" alt="nodejs" />
+              </span>
+              <span class="html-icon icon big">
+                <img src="src/img/skills/html-icon.svg" alt="html" />
+              </span>
+              <span class="typescript-icon icon big">
                 <img
                   src="src/img/skills/typescript-icon.svg"
                   alt="typescript"
                 />
               </span>
-              <span class="sass-icon icon big">
-                <img src="src/img/skills/sass-icon.svg" alt="sass" />
-              </span>
-              <span class="sql-icon icon big">
-                <img src="src/img/skills/sql-icon.svg" alt="sql" />
+              <span class="tailwindcss-icon icon big">
+                <img
+                  src="src/img/skills/tailwindcss-icon.svg"
+                  alt="tailwindcss"
+                />
               </span>
               <span class="react-icon icon big">
                 <img src="src/img/skills/react-icon.svg" alt="react" />
@@ -130,23 +136,27 @@
                   alt="javascript"
                 />
               </span>
-              <span class="parcel-icon icon small">
-                <img src="src/img/skills/parcel-icon.svg" alt="parcel" />
+              <span class="sql-icon icon small">
+                <img src="src/img/skills/sql-icon.svg" alt="sql" />
               </span>
-              <span class="css-icon icon big">
-                <img src="src/img/skills/css-icon.svg" alt="css3" />
+              <span class="nextjs-icon icon big">
+                <img src="src/img/skills/nextjs-icon.svg" alt="nextjs" />
               </span>
-              <span class="git-icon icon small">
+              <span class="git-icon icon extra-small">
                 <img src="src/img/skills/git-icon.svg" alt="git" />
               </span>
-              <span class="html-icon icon big">
-                <img src="src/img/skills/html-icon.svg" alt="html5" />
+
+              <span class="css-icon icon big">
+                <img src="src/img/skills/css-icon.svg" alt="css3" />
               </span>
               <span class="figma-icon icon big">
                 <img src="src/img/skills/figma-icon.svg" alt="figma" />
               </span>
-              <span class="npm-icon icon small">
-                <img src="src/img/skills/npm-icon.svg" alt="npm" />
+              <span class="sass-icon icon small">
+                <img src="src/img/skills/sass-icon.svg" alt="sass" />
+              </span>
+              <span class="grafana-icon icon extra-small">
+                <img src="src/img/skills/grafana-icon.svg" alt="grafana" />
               </span>
             </div>
           </div>
