REFACTOR: update job experience and update resume

--- a/index.html
+++ b/index.html
@@ -333,6 +333,26 @@
         <div class="grid-card-container">
           <div class="experience-card experience-card-1">
             <div class="fade"></div>
+            <h3 class="experience-title">Frontend Engineer (SDE-1)</h3>
+            <h4 class="experience-company">Gyizer System Pvt Ltd</h4>
+            <p class="experience-period">1 Year</p>
+            <div class="experience-detail">
+              <p>
+                Led multi-platform Adani Finance App development, focusing on
+                frontend and UI/UX.
+              </p>
+              <p>
+                Revamped Algo Trading App with custom trading chart and backend
+                integration.
+              </p>
+              <p>
+                Ensured flawless UI for Kotak E Tax Payment & Payment Gateway
+                projects.
+              </p>
+            </div>
+          </div>
+          <div class="experience-card experience-card-2">
+            <div class="fade"></div>
             <h3 class="experience-title">Production Engineer</h3>
             <h4 class="experience-company">Secure meters Ltd</h4>
             <p class="experience-period">11 months</p>
@@ -352,7 +372,7 @@
               </p>
             </div>
           </div>
-          <div class="experience-card experience-card-2">
+          <div class="experience-card experience-card-3">
             <div class="fade"></div>
             <h3 class="experience-title">Internship</h3>
             <h4 class="experience-company">Secure meters Ltd</h4>
@@ -364,23 +384,6 @@
               </p>
               <p>Contributed in improving line productivity by 60%.</p>
               <p>Also, worked with meter testing softwares and machines.</p>
-            </div>
-          </div>
-          <div class="experience-card experience-card-3">
-            <div class="fade"></div>
-            <h3 class="experience-title">Summer Training Program</h3>
-            <h4 class="experience-company">MNIT, Jaipur</h4>
-            <p class="experience-period">2 months</p>
-            <div class="experience-detail">
-              <p>
-                In this training program, I learnt about Smart Electronic System
-                Design in context of the below topics.
-              </p>
-              <p>
-                Pattern Recognition, designing and development of semiconductor
-                devices.
-              </p>
-              <p>Modelling and Simulation of Electronic Circuits and System.</p>
             </div>
           </div>
         </div>
