REFACTOR: add location in job experience

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
             <div class="fade"></div>
             <h3 class="experience-title">Frontend Engineer (SDE-1)</h3>
             <h4 class="experience-company">Gyizer System Pvt Ltd</h4>
-            <p class="experience-period">1 Year</p>
+            <p class="experience-period">Indore, India | 1 Year</p>
             <div class="experience-detail">
               <p>
                 Led multi-platform Adani Finance App development, focusing on
@@ -355,7 +355,7 @@
             <div class="fade"></div>
             <h3 class="experience-title">Production Engineer</h3>
             <h4 class="experience-company">Secure meters Ltd</h4>
-            <p class="experience-period">11 months</p>
+            <p class="experience-period">Udaipur, India | 11 months</p>
             <div class="experience-detail">
               <p>
                 Improved component traceability process with the help of
@@ -376,7 +376,7 @@
             <div class="fade"></div>
             <h3 class="experience-title">Internship</h3>
             <h4 class="experience-company">Secure meters Ltd</h4>
-            <p class="experience-period">6 months</p>
+            <p class="experience-period">Udaipur, India | 6 months</p>
             <div class="experience-detail">
               <p>
                 I worked on customer returned product failure analysis. Also
