REFACTOR: add new project trade chart widget

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                         href="https://precook-recipe-app-project.web.app/"
                         target="_blank"
                         ><i class="fa-solid fa-arrow-up-right-from-square"></i>
-                        Website</a
+                        Play</a
                       >
                     </li>
                   </ul>
@@ -201,7 +201,7 @@
                 <div class="fade"></div>
                 <div class="project-content">
                   <img
-                    src="src/img/projects/expense_tracker.png"
+                    src="src/img/projects/expense-tracker.png"
                     alt="Expense Tracker"
                   />
                   <h3>Expense Tracker</h3>
@@ -222,7 +222,37 @@
                         href="https://expense-tracker-sanskar.netlify.app/"
                         target="_blank"
                         ><i class="fa-solid fa-arrow-up-right-from-square"></i>
-                        Website</a
+                        Play</a
+                      >
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="project-card-2 project-card">
+                <div class="fade"></div>
+                <div class="project-content">
+                  <img src="src/img/projects/w3schools.png" alt="W3Schools" />
+                  <h3>w3Schools Clone</h3>
+                  <p>
+                    Responsive website with interactive user interface, dropdown
+                    menu and grid layout using HTML, CSS & JS.
+                  </p>
+                  <ul class="project-links-2">
+                    <li>
+                      <a
+                        href="https://github.com/sanskar001/w3schools-clone"
+                        target="_blank"
+                        ><i class="fa-solid fa-code"></i> Code</a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        href="https://sanskar001.github.io/w3schools-clone/"
+                        target="_blank"
+                        ><i class="fa-solid fa-arrow-up-right-from-square"></i>
+                        Play</a
                       >
                     </li>
                   </ul>
@@ -255,7 +285,7 @@
                         href="https://curious-sanskar-maheshwari.netlify.app/"
                         target="_blank"
                         ><i class="fa-solid fa-arrow-up-right-from-square"></i>
-                        Website</a
+                        Play</a
                       >
                     </li>
                   </ul>
@@ -267,7 +297,7 @@
                 <div class="fade"></div>
                 <div class="project-content">
                   <img
-                    src="src/img/projects/tic_tact_toe.png"
+                    src="src/img/projects/tic-tac-toe.png"
                     alt="Tic-Tac-Toe"
                   />
                   <h3>Tic Tac Toe</h3>
@@ -288,37 +318,41 @@
                         href="https://sanskar001.github.io/tic-tac-toe/"
                         target="_blank"
                         ><i class="fa-solid fa-arrow-up-right-from-square"></i>
-                        Website</a
+                        Play</a
                       >
                     </li>
                   </ul>
                 </div>
               </div>
             </div>
+
             <div class="swiper-slide">
-              <div class="project-card-2 project-card">
+              <div class="project-card-6 project-card">
                 <div class="fade"></div>
                 <div class="project-content">
-                  <img src="src/img/projects/w3schools2.png" alt="W3Schools" />
-                  <h3>w3Schools Clone</h3>
+                  <img
+                    src="src/img/projects/trade-chart.png"
+                    alt="Trade Chart Widget"
+                  />
+                  <h3>Trade Chart Widget</h3>
                   <p>
-                    Responsive website with interactive user interface, dropdown
-                    menu and grid layout using HTML, CSS & JS.
+                    Library built on top of TradingView lightweight chart using
+                    React.js, Typescript & TailwindCSS.
                   </p>
                   <ul class="project-links-2">
                     <li>
                       <a
-                        href="https://github.com/sanskar001/w3schools-clone"
+                        href="https://github.com/sanskar001/trade-chart-react"
                         target="_blank"
                         ><i class="fa-solid fa-code"></i> Code</a
                       >
                     </li>
                     <li>
                       <a
-                        href="https://sanskar001.github.io/w3schools-clone/"
+                        href="https://github.com/sanskar001/trade-chart-react"
                         target="_blank"
                         ><i class="fa-solid fa-arrow-up-right-from-square"></i>
-                        Website</a
+                        Play</a
                       >
                     </li>
                   </ul>
