refactor: added mtap experience and change some text

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <link rel="stylesheet" href="src/sass/main.scss" />
     <script defer src="https://smtpjs.com/v3/smtp.js"></script>
     <script defer type="module" src="src/js/app.js"></script>
-    <title>Curious | Sanskar Maheshwari | Frontend developer</title>
+    <title>Curious | Sanskar Maheshwari | Frontend engineer</title>
   </head>
   <body>
     <div class="intro">
@@ -47,7 +47,7 @@
           <h2 class="name">
             Hi, I am Sanskar Maheshwari<span class="hand">👋</span>
           </h2>
-          <h3 class="role">Frontend Web Developer</h3>
+          <h3 class="role">Frontend Engineer</h3>
         </div>
       </main>
       <footer>
@@ -65,7 +65,7 @@
               <h4 class="text">
                 Hey! My name is <span>Sanskar Maheshwari</span> 👦. I am
                 <span id="my-age"></span> years old self taught
-                <span>frontend web developer</span> from India.
+                <span>frontend engineer</span> from India.
               </h4>
               <p class="text">
                 I&apos;ve always been someone who has both a creative and a
@@ -91,16 +91,18 @@
           <div class="left">
             <div class="description">
               <p class="text">
-                I work with modern web technologies like Nextjs, React,
-                Typescript, Tailwind CSS and Redux to create successfull
-                responsive + interactive web app that are fast, easy to use.
+                I&apos;m a skilled frontend engineer with expertise in React,
+                Next.js, TypeScript, Redux, and TailwindCSS, building
+                high-performance, user-focused applications.
               </p>
               <p class="text">
-                I create beautiful UI with greater UX with Figma design tool.
+                Proficient in Node.js, MongoDB, MySQL, and Docker, I ensure
+                seamless integration and scalability.
               </p>
               <p class="text">
-                And also work on some neccessay tools like Git, Docker,
-                Grafana-Faro etc.
+                With strong debugging, system design, and leadership skills, I
+                drive innovation, mentor teams, and deliver robust, maintainable
+                solutions using tools like Git and Grafana.
               </p>
             </div>
           </div>
@@ -367,9 +369,36 @@
         <div class="grid-card-container">
           <div class="experience-card experience-card-1">
             <div class="fade"></div>
-            <h3 class="experience-title">Frontend Engineer (SDE-1)</h3>
+            <h3 class="experience-title">Frontend Engineer (SDE-I)</h3>
+            <h4 class="experience-company">MTAP Technologies</h4>
+            <p class="experience-period">
+              Gurugram, Haryana | Mar&apos;24 - Present
+            </p>
+            <div class="experience-detail">
+              <p>
+                Revamped SafeTrax v3.0: Improved performance and UI using
+                Next.js, Bun, React Query, and Material UI.
+              </p>
+              <p>
+                Developed client-specific configuration dashboards for SafeTrax.
+              </p>
+              <p>
+                Built REST APIs for trips and live maps with role-based
+                authorization.
+              </p>
+              <p>
+                Resolved bugs, optimized load times with lazy loading, and
+                streamlined trip confirmations in Google Maps.
+              </p>
+            </div>
+          </div>
+          <div class="experience-card experience-card-2">
+            <div class="fade"></div>
+            <h3 class="experience-title">Frontend Engineer (SDE-I)</h3>
             <h4 class="experience-company">Gyizer System Pvt Ltd</h4>
-            <p class="experience-period">Indore, India | 1 Year</p>
+            <p class="experience-period">
+              Indore, Madhya Pradesh | Nov&apos;22 - Oct&apos;23
+            </p>
             <div class="experience-detail">
               <p>
                 Led multi-platform Adani Finance App development, focusing on
@@ -383,41 +412,32 @@
                 Ensured flawless UI for Kotak E Tax Payment & Payment Gateway
                 projects.
               </p>
-            </div>
-          </div>
-          <div class="experience-card experience-card-2">
-            <div class="fade"></div>
-            <h3 class="experience-title">Production Engineer</h3>
-            <h4 class="experience-company">Secure meters Ltd</h4>
-            <p class="experience-period">Udaipur, India | 11 months</p>
-            <div class="experience-detail">
               <p>
-                Improved component traceability process with the help of
-                software and redesigned a production line to prevent production
-                loss.
-              </p>
-              <p>
-                Also worked collaboratively with Secure meters UK on meter
-                defect analysis.
-              </p>
-              <p>
-                Effectively managed seven production lines and optimized them
-                using Shainin Technique.
+                Mentored 3 junior developers, enhancing their frontend dev
+                proficiency
               </p>
             </div>
           </div>
           <div class="experience-card experience-card-3">
             <div class="fade"></div>
-            <h3 class="experience-title">Internship</h3>
+            <h3 class="experience-title">Software Engineer</h3>
             <h4 class="experience-company">Secure meters Ltd</h4>
-            <p class="experience-period">Udaipur, India | 6 months</p>
+            <p class="experience-period">
+              Udaipur, Rajasthan | Jan&apos;21 - May&apos;22
+            </p>
             <div class="experience-detail">
               <p>
-                I worked on customer returned product failure analysis. Also
-                contributed to improving production line process.
+                Developed a tool that increased component traceability by 50%,
+                enhancing quality control.
               </p>
-              <p>Contributed in improving line productivity by 60%.</p>
-              <p>Also, worked with meter testing softwares and machines.</p>
+              <p>Created an LCD testing tool utilizing image processing.</p>
+              <p>
+                Contributed to a 60% increase in line productivity through
+                process optimization.
+              </p>
+              <p>
+                Implemented scripts to streamline the meter testing process.
+              </p>
             </div>
           </div>
         </div>
@@ -428,8 +448,8 @@
           <div class="left">
             <div class="description">
               <p class="text">
-                I am interested in working with you. If you have any job
-                opportunity, please consider me!
+                Excited to collaborate! If you have any opportunities,
+                let&apos;s connect and create something great together.
               </p>
               <p class="text">If you have any question, feel free to ask 😊.</p>
             </div>
